[package]
name = "sys-measure"
version = "0.1.0"
edition = "2021"
description = "system measurement library for Rust"
license = "MIT"

[dependencies]
log = "0.4"
libc = "0.2"
bytesize = "1.3"
time = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
nom = "8"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"